--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: white;">
-  <a class="navbar-brand" [routerLink]="['/']">ITJobSearch</a>
+  <a class="navbar-brand" [routerLink]="['/']">VisitArrangement</a>
 
   <ul class="navbar-nav mr-auto">
-    <a class="nav-link" [routerLink]="['/joboffers']" >Joboffers</a>
+    <a class="nav-link" [routerLink]="['/joboffers']" >Home</a>
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <a class="nav-link" [routerLink]="['/profile']" *ngIf="isUserAuthenticated">Welcome</a>
