--- a/Client/src/app/authentication/login/login.component.html
+++ b/Client/src/app/authentication/login/login.component.html
@@ -28,7 +28,7 @@
           <br>
           <div class="mb-3 row">
               <div class="col-md-1">
-                  <button type="submit" class="btn btn-info" [disabled]="!loginForm.valid">Login</button>
+                  <button type="submit" class="btn btn-success" [disabled]="!loginForm.valid">Login</button>
               </div>
           </div>
       </form>
