--- a/Client/src/app/authentication/register-user/register-user.component.html
+++ b/Client/src/app/authentication/register-user/register-user.component.html
@@ -49,7 +49,7 @@
           <br>
           <div class="mb-3 row">
               <div class="col-md-1">
-                  <button type="submit" class="btn btn-info" [disabled]="!registerForm.valid">Register</button>
+                  <button type="submit" class="btn btn-success" [disabled]="!registerForm.valid">Register</button>
               </div>
           </div>
       </form>
