--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: white;">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #28a745;">
   <a class="navbar-brand" [routerLink]="['/']">VisitArrangement</a>
 
   <ul class="navbar-nav mr-auto">
-    <a class="nav-link" [routerLink]="['/joboffers']" >Home</a>
+    <a class="nav-link" [routerLink]="['/home']" >Home</a>
   </ul>
   <ul class="nav navbar-nav navbar-right">
-    <a class="nav-link" [routerLink]="['/profile']" *ngIf="isUserAuthenticated">Welcome</a>
+    <a class="nav-link" [routerLink]="['/profile']" *ngIf="isUserAuthenticated">My profile</a>
     <a class="nav-link" [routerLink]="['/authentication/register']" routerLinkActive="active" *ngIf="!isUserAuthenticated">Register</a>
     <a class="nav-link" [routerLink]="['/authentication/login']" *ngIf="!isUserAuthenticated">Login</a>
     <a class="nav-link navbar-right" [routerLink]="['/login']" *ngIf="isUserAuthenticated" (click)="logout()">Log out</a>
