--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #28a745;">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top">
   <a class="navbar-brand" [routerLink]="['/']">VisitArrangement</a>
 
   <ul class="navbar-nav mr-auto">
