--- a/Client/src/app/profile-card/profile-card.component.html
+++ b/Client/src/app/profile-card/profile-card.component.html
@@ -7,7 +7,7 @@
         <p class="profile-name"><span id="last-name">{{user.lastName}}</span></p>
         <p class="profile-email"><span id="email">{{user.email}}</span></p>
     </div>
-    <button class="edit-button" *ngIf="canEdit" (click)="isEditing = true">Edit</button>
+    <button class="edit-button" *ngIf="canEdit" (click)="edit()">Edit</button>
 </div>
 
 <div class="profile-card" *ngIf="user !== undefined && formGroup !== undefined && isEditing">
