--- a/Client/src/app/profile/profile.component.html
+++ b/Client/src/app/profile/profile.component.html
@@ -1,2 +1,5 @@
-<app-profile-card [user]="user" [canEdit]="true">
+<app-profile-card
+    [user]="user" [canEdit]="true" [(isEditing)]="isEditing"
+    (fileUploadStarted)="uploadFile($event)"
+    (saveUpload)="save($event)">
 </app-profile-card>
