--- a/Client/src/app/profile-card/profile-card.component.html
+++ b/Client/src/app/profile-card/profile-card.component.html
@@ -8,32 +8,55 @@
         <p class="profile-email"><span id="email">{{user.email}}</span></p>
     </div>
     <button class="edit-button" *ngIf="canEdit" (click)="edit()">Edit</button>
+    <app-location 
+        *ngFor="let location of user.locations" 
+        [locationName]="location.name" 
+        [locationImages]="location.images">
+    </app-location>
 </div>
 
 <div class="profile-card" *ngIf="user !== undefined && formGroup !== undefined && isEditing">
     <form [formGroup]="formGroup" (ngSubmit)="save()">
-    <div class="image-container">
-        <input #file type="file" accept="image/*"
-            (change)="uploadFile(file.files)">
-        <img [src]="user.profilePicture" alt="User Profile Picture" class="profile-image profile-image-edit"
-            (click)="triggerFileInputClick(file)">
-        <div class="overlay">
-            <span>Upload</span>
+        <div class="image-container">
+            <input #file type="file" accept="image/*"
+                (change)="uploadFile(file.files)">
+            <img [src]="user.profilePicture" alt="User Profile Picture" class="profile-image profile-image-edit"
+                (click)="triggerFileInputClick(file)">
+            <div class="overlay">
+                <span>Upload</span>
+            </div>
         </div>
-    </div>
-    <div class="profile-info">
-        <div>
-            First Name:
-            <br>
-            <input formControlName="firstName">
+        <div class="profile-info">
+            <div>
+                First Name:
+                <br>
+                <input formControlName="firstName">
+            </div>
+            <div>
+                Last Name:
+                <br>
+                <input formControlName="lastName">
+            </div>
+            <p class="profile-email"><span id="email">{{user.email}}</span></p>
         </div>
-        <div>
-            Last Name:
-            <br>
-            <input formControlName="lastName">
+        <div class="locations-section">
+            <h3>Locations</h3>
+            <div *ngFor="let location of user.locations; let i = index" class="location-item">
+            <div class="location-header">
+                <div> {{location.name }}</div>
+                <button class="remove-location" type="button" (click)="removeLocation(i)">Remove</button>
+            </div>
+            <div class="image-upload">
+                <label for="file-upload-{{i}}" class="upload-label">Upload Images</label>
+                <input id="file-upload-{{i}}" type="file" accept="image/*" multiple (change)="uploadImages($event, i)" />
+                <div class="uploaded-images">
+                <img *ngFor="let img of location.images" [src]="img" alt="Uploaded Image" />
+                </div>
+            </div>
+            </div>
+            <input formControlName="locationName" placeholder="Location Name" />
+            <button class="add-location" type="button" (click)="addLocation()" [disabled]="this.formGroup === undefined || this.formGroup.get('locationName')?.value?.trim() === ''">Add New Location</button>
         </div>
-        <p class="profile-email"><span id="email">{{user.email}}</span></p>
-    </div>
-    <button class="edit-button" type="submit" >Save</button>
+        <button class="edit-button" type="submit" >Save</button>
     </form>
 </div>
