--- a/Client/src/app/profile-card/profile-card.component.scss
+++ b/Client/src/app/profile-card/profile-card.component.scss
@@ -42,6 +42,7 @@
 }
 
 .edit-button {
+    margin-top: 20px;
     padding: 10px 25px;
     background-color: #28a745;
     color: #ffffff;
@@ -136,12 +137,16 @@
             }
 
             .remove-location {
+                padding: 10px 20px;
+                margin-left: 5px;
                 background-color: #ff4d4f;
-                color: white;
+                color: #ffffff;
+                font-size: 14px;
+                font-weight: bold;
                 border: none;
-                padding: 8px 10px;
-                border-radius: 4px;
+                border-radius: 20px !important;
                 cursor: pointer;
+                transition: background-color 0.3s ease, transform 0.2s ease;
 
                 &:hover {
                 background-color: #d9363e;
@@ -179,16 +184,16 @@
 
     .add-location {
         padding: 10px 20px;
+        margin-left: 5px;
         background-color: #28a745;
-        color: white;
+        color: #ffffff;
+        font-size: 14px;
+        font-weight: bold;
         border: none;
-        border-radius: 4px;
+        border-radius: 20px !important;
         cursor: pointer;
-
-        &:hover {
-        background-color: #218838;
-        }
-    }
+        transition: background-color 0.3s ease, transform 0.2s ease;
+      }
 }
   
 button:disabled {
