--- a/Client/src/app/profile-card/profile-card.component.html
+++ b/Client/src/app/profile-card/profile-card.component.html
@@ -1,18 +1,23 @@
 <div class="profile-card" *ngIf="user !== undefined && !isEditing">
-    <div>
-        <img [src]="user.profilePicture" alt="User Profile Picture" class="profile-image">
-    </div>
     <div class="profile-info">
+        <div>
+            <img [src]="user.profilePicture" alt="User Profile Picture" class="profile-image">
+        </div>
         <p class="profile-name"><span id="first-name">{{user.firstName}}</span></p>
         <p class="profile-name"><span id="last-name">{{user.lastName}}</span></p>
         <p class="profile-email"><span id="email">{{user.email}}</span></p>
+        <button class="edit-button" *ngIf="canEdit" (click)="edit()">Edit</button>
     </div>
-    <button class="edit-button" *ngIf="canEdit" (click)="edit()">Edit</button>
-    <app-location 
-        *ngFor="let location of user.locations" 
-        [locationName]="location.name" 
-        [locationImages]="location.images">
-    </app-location>
+    <div class="locations">
+        <h4 class="no-locations" *ngIf="user.locations.length === 0">
+            No locations
+        </h4>
+        <app-location 
+            *ngFor="let location of user.locations" 
+            [locationName]="location.name" 
+            [locationImages]="location.images">
+        </app-location>
+    </div>
 </div>
 
 <div class="profile-card" *ngIf="user !== undefined && formGroup !== undefined && isEditing">
