--- a/Client/src/app/profile/profile.component.html
+++ b/Client/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <app-profile-card
     [user]="user" [canEdit]="true" [(isEditing)]="isEditing"
-    (fileUploadStarted)="uploadFile($event)"
+    (profilePictureUploaded)="uploadProfilePicture($event)"
     (saveUpload)="save($event)">
 </app-profile-card>
