--- a/Client/src/app/profiles-list/profiles-list.component.html
+++ b/Client/src/app/profiles-list/profiles-list.component.html
@@ -1,3 +1,3 @@
-<app-profile-card *ngFor="let user of users" [user]="user">
+<app-profile-card *ngFor="let user of users" [user]="user" (click)="openProfile(user.id)">
 
 </app-profile-card>
