--- a/Client/src/app/messages/messages.component.scss
+++ b/Client/src/app/messages/messages.component.scss
@@ -52,6 +52,12 @@
       padding: 10px;
       background-color: #eaf7e1;
       border-bottom: 1px solid #ddd;
+      justify-content: space-between;
+
+      .chat-personal-info {
+        display: flex;
+        align-items: end;
+      }
 
       .profile-name {
         font-size: 16px;
@@ -123,20 +129,20 @@
         margin-right: 10px;
         font-size: 14px;
       }
-
-      .send-btn {
-        padding: 10px 20px;
-        background-color: #4caf50;
-        color: #fff;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-
-        &:hover {
-          background-color: #45a049;
-        }
-      }
     }
+  }
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #45a049;
   }
 }
