--- a/Client/src/app/messages/messages.component.html
+++ b/Client/src/app/messages/messages.component.html
@@ -3,10 +3,11 @@
   <div class="messages-sidebar">
     <div *ngFor="let message of messageInfos" class="message-item" (click)="selectUser(message.userId)">
       <img [src]="message?.userProfilePicture" alt="User Profile Picture" class="profile-image" />
-      <div class="user-info">
-        <p class="profile-name">{{ message?.userFirstName }} {{ message?.userLastName }}</p>
-      </div>
-      <p class="message-text">{{ message.messageText }}</p>
+      <div class="sidbar-header">
+        <div class="profile-name">{{ message?.userFirstName }} {{ message?.userLastName }}
+        </div>
+      <div class="message-text">{{ message.messageText }}</div>
+    </div>
     </div>
   </div>
 
@@ -14,10 +15,10 @@
   <div class="messages-chat">
     <div *ngIf="userMessages" class="messages-chat-wrapper">
       <div class="chat-header">
-        <div class="chat-personal-info">
-          <img [src]="userMessages.profilePicture" alt="User Profile Picture" class="profile-image" />
+        <div class="chat-personal-info" >
+          <img [src]="userMessages.profilePicture" alt="User Profile Picture" class="profile-image" [routerLink]="['/profiles', otherUserId]"/>
           <div class="user-info">
-            <p class="profile-name">{{ userMessages.firstName }} {{ userMessages.lastName }}</p>
+            <a class="nav-link profile-name" [routerLink]="['/profiles', otherUserId]">{{ userMessages.firstName }} {{ userMessages.lastName }}</a>
           </div>
         </div>
         <button *ngIf="!userMessages.visitAgreedByCurrentUser" (click)="arrangeVisit()">Arrange Visit</button>
