--- a/Client/src/app/messages/messages.component.scss
+++ b/Client/src/app/messages/messages.component.scss
@@ -81,6 +81,7 @@
       padding: 10px;
       overflow-y: auto; 
       background-color: #ffffff;
+      max-height: 460px;
     }
 
     .chat-message {
