--- a/Client/src/app/authentication/register-user/register-user.component.css
+++ b/Client/src/app/authentication/register-user/register-user.component.css
@@ -1,14 +1,7 @@
-em{
-  color: red;
-  font-weight: bold;
-}
-
-.ng-invalid.ng-touched{
-  border-color: red;
-}
-
-.card{
-  margin-top: 10px;
-  background-color: white;
-  box-shadow: 1px 1px 1px gainsboro;
+.register-card {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  background: white;
 }
